header da ordem

--- a/app/views/ordems/_header_tabela.html.erb
+++ b/app/views/ordems/_header_tabela.html.erb
@@ -3,8 +3,8 @@
 	<th>Número OS</th>
   <th>Abertura</th>
   <th>Status</th>
-  <th>Usuário</th>
-  <th>Departamento</th>
   <th>Tecnico</th>
+  <th>Departamento</th>
+  <th>Cliente</th>
   <th>Ações</th>
 </tr>
