--- a/app/views/estatisticas/index.html.erb
+++ b/app/views/estatisticas/index.html.erb
@@ -4,7 +4,7 @@
 
 <% content_for :sub_titulo do %>
 	Estatísticas
-  
+
 <% end %>
 
 <%= form_tag("/estatisticas/index", method: "get") do %>
@@ -52,7 +52,7 @@
 					<td><%= t.name %></td>
 					<td><%= t.atendimentos.no_periodo(@ini, @fim).count %></td>
 					<td><%= ((t.atendimentos.no_periodo(@ini, @fim).count)*100)/@chamados.count %>%</td>
-					
+
 					<% ctf = 0 %>
 					<% ctr = 0 %>
 					<% ctn = 0 %>
@@ -120,8 +120,8 @@
 				<tr>
 					<td><%= t.name %></td>
 					<td><%= t.departamento.sigla %></td>
-					<td><%= t.chamados.count %></td>
-					<td><%= ((t.chamados.no_periodo(@ini, @fim).count)*100)/@chamados.count %>%</td>
+					<td><%= t.chamados.no_periodo(@ini, @fim).count %></td>
+					<td><%= ((t.chamados.no_periodo(@ini, @fim).count)*100)/@chamados.no_periodo(@ini, @fim).count %>%</td>
 
 					<% ctf = 0 %>
 					<% ctr = 0 %>
@@ -157,7 +157,7 @@
 						<td></td>
 						<td></td>
 						<td></td>
-					<% end %>	
+					<% end %>
 
 				</tr>
 			<% end %>
@@ -186,7 +186,7 @@
 				<tr>
 					<td><%= d.sigla %></td>
 					<td><%= d.chamados.no_periodo(@ini, @fim).count %></td>
-					<td><%= (d.chamados.no_periodo(@ini, @fim).count*100)/@chamados.count %>%</td>
+					<td><%= (d.chamados.no_periodo(@ini, @fim).count*100)/@chamados.no_periodo(@ini, @fim).count %>%</td>
 				</tr>
 			<% end %>
 		<% end %>
