--- a/app/views/estatisticas/index.html.erb
+++ b/app/views/estatisticas/index.html.erb
@@ -33,7 +33,7 @@
 <h4><strong> RELATÓRIO DE ATENDIMENTOS POR TÉCNICO </strong></h4>
 <br/>
 
-<table id="tabela" class="display" cellspacing="0" width="100%">
+<table id="tabela" class="display2" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>TECNICO</th>
@@ -101,7 +101,7 @@
 <h4><strong> RELATÓRIO DE ABERTURA POR USUÁRIO </strong></h4>
 <br/>
 
-<table id="tabela" class="display" cellspacing="0" width="100%">
+<table id="tabela" class="display2" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>REQUISITANTE</th>
@@ -172,7 +172,7 @@
 <br/>
 
 
-<table id="tabela" class="display" cellspacing="0" width="100%">
+<table id="tabela" class="display2" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>DEPARTAMENTO</th>
@@ -200,7 +200,7 @@
 <h4><strong> RELATÓRIO DE ABERTURA POR PROBLEMA </strong></h4>
 <br/>
 
-<table id="tabela" class="display" cellspacing="0" width="100%">
+<table id="tabela" class="display2" cellspacing="0" width="100%">
 	<thead>
 		<tr>
 			<th>TIPO</th>
