criando novo metodo de criacao de chamado e adicionanado campo de apagar os

--- a/app/views/chamados/cancelar_chamado.html.erb
+++ b/app/views/chamados/cancelar_chamado.html.erb
@@ -6,7 +6,7 @@
   Cancelar Chamado
 <% end %>
 
-<% if @chamado.status == "ABERTO" or @chamado.status == "EM ATENDIMENTO" %>
+<% if @chamado.status == "ABERTO" %>
 
 	<%= render 'form_cancelar_chamado' %>
 
