--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -96,6 +96,18 @@
           </a>
         </li>
 
+        <li>
+          <a href="/orgaos">
+            <i class="fa fa-tree"></i> <span>Orgãos</span>
+          </a>
+        </li>
+
+        <li>
+          <a href="/escolas">
+            <i class="fa fa-university"></i> <span>Escolas</span>
+          </a>
+        </li>
+
         <% if current_user.nao_admin_nao_tecnico %>
 
           <li>
