quantidade de equipamentos estatisticas

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -82,6 +82,13 @@
               <i class="fa fa-unlock"></i> <span>Abrir Chamado TEC</span>
             </a>
           </li>
+
+          <li>
+          <a href="/estatisticas/equipamentos">
+            <i class="fa fa-microchip"></i> <span>Quant Equipamentos</span>
+          </a>
+        </li>
+
         <% end %>
 
         <li>
