usando delegate para equipamento e tipo equipamento

--- a/app/views/estatisticas/equipamentos.html.erb
+++ b/app/views/estatisticas/equipamentos.html.erb
@@ -27,7 +27,7 @@
 
   <br/>
 
-  <strong>Detalhe:</strong>
+  <strong>Modelo:</strong>
   <%= select_tag "detalhe", options_from_collection_for_select(@detalhes_equipamentos, "id", "modelo"), include_blank: true %>
 
   <br/>
